2005-11-20 Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * Removed executor hooks, they weren't used anyway.
        * Check if eA has a valid cache directory.
        * Make the init of php fail if the initialisation of the shared memory
          or cache directory failes.
        * set shared memory size in eaccelerator.ini to 0 so the default OS
          size is used.
        * README updates
        * Updated version to 0.9.4-rc1

2005-11-17 Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * Fixed optimizer bug with php 5.0.5

2005-11-16 Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * Patch for including files in same directory (#1259695) from Alexy

2005-11-15 Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * Spinlock test now tests for i386 and x86_64. Because spinlocks where
          never used on 64-bit and sysv ipc locking didn't work, there were a 
          lot of problems.

2005-10-20 Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * The two error message added to see if a lock has failed made configure 
          fail to compile the shared memory test.

2005-10-13 Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * Fixed the php5 optimizer bug.
        * Changed semaphore permissions to 0666 so sysvipc locks work. Working 
          locks seem a bit more important than making the semaphore public. (#1295970)
        * Added error messages when a lock can't be aquired or released.

2005-08-03 Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * Included some compile fixes. (Thanks Matt)
        * Included patch from the hardened php guys to make eA work
          with hardened php.

2005-07-11 Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * ea_store.c and ea_restore.c functions clean up
        * extraced restore_class_parent and restore_class_methods from
          restore_class_entry to share code with loader.c