@@ -1,5 +1,10 @@
 2005-11-20 Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>
 
+        * check_cache_dir is only done when shm_only = 0
+        * Only eA is disabled when init of shared mem or cache check fails
+
+2005-11-20 Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>
+
         * Removed executor hooks, they weren't used anyway.
         * Check if eA has a valid cache directory.
         * Make the init of php fail if the initialisation of the shared memory
